Update Отчёт о проделанной работе.md

--- a/Отчёт о проделанной работе.md
+++ b/Отчёт о проделанной работе.md
@@ -1,5 +1,7 @@
 # Отчёт о проделанной работе #
 
+##Климкин Андрей БПМИ 141-2, ФКН, ВШЭ##
+
 ## Внешний вид: ##
 
 1. Стартовая страничка с нетривиальной, располагающей клиентов вёрсткой, слайдером, а также навигацией по сайту
