Update Отчёт о проделанной работе.md

--- a/Отчёт о проделанной работе.md
+++ b/Отчёт о проделанной работе.md
@@ -15,10 +15,10 @@
 
 ###Реализованные возможости:###
 
-1. Корзина с динамическим добавлением(удалением) товара через Ajax взаимодействие, а также динамическим изменением количества товара на складе.
+1. Корзина с динамическим добавлением(удалением) товара через Ajax взаимодействие. При совершении покупки изменяется количество товара на складе.
 2. Авторизация через vk (VK Oauth)
 3. Личный кабинет с возможностью просмотра подрбной информации о ранее приобретённых товарах: для каждой покупки указана стоймость за единицу товара, количества купленных единиц, а также дата совершения покупки.
-4. Возможность оплатить покупку через систему онлайн платежей paypal с проверкой на корректность составленного запроса потребителя - то количество товара, который запрашивает потребитель должно присутствовать на складе.
+4. Возможность оплаты заказа через систему онлайн платежей paypal с проверкой на корректность составленного запроса потребителя - количество товара, который запрашивает потребитель, должно присутствовать на складе, иначе заказ откланяется.
 5. Поиск товаров (находится на главной странице)
 6. Фильтр товаров по категориям
 7. Для затратных запросов к БД было использовано кэширование - memcached
