Update Отчёт о проделанной работе.md

--- a/Отчёт о проделанной работе.md
+++ b/Отчёт о проделанной работе.md
@@ -6,8 +6,8 @@
 
 1. Стартовая страничка с нетривиальной, располагающей клиентов вёрсткой, слайдером, а также навигацией по сайту
 2. Динамичная корзина для пользователя, в которую в любой момент можно добавить и удалить неограниченное число заказов
-3. Отдельные витрины для женских часов, а также для мужских
-4. Отдельная витрина для коллекций, на которой присутсвует фильтр
+3. Отдельные витрины для женских часов и мужских часов
+4. Отдельная витрина для коллекций. На данной витрине присутсвует фильтр для удобного поиска
 5. Личный кабинет пользователя с историей покупок
 
 ## Функциональность: ##
